--- a/src/site/pages/blog.njk
+++ b/src/site/pages/blog.njk
@@ -9,7 +9,7 @@ permalink: blog/index.html
 
 {% block main %}
 
-  <h1>Blog</h1>
+  <h1 class="title">Blog</h1>
 
   <div class="posts">
     {%- for post in collections.posts %}
