--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -9,19 +9,19 @@ permalink: index.html
 
 {% block main %}
 
-  <h1>David Chen</h1>
+  <h1 class="title">David Chen</h1>
 
   <div class="hero">
     <div class="hero__blurb">
       <p>
         Hello! I'm a software engineer living in the San Francisco Bay Area.
-        This site is dedicated to my creative interests and whims. I enjoy
-        programming, and sometimes <a href="{{ site.blog }}">write about it</a>.
+        This site is dedicated to my creative interests and whims. I find programming
+        fascinating, and sometimes <a href="{{ site.blog }}">write about it</a>.
       </p>
       <p>
         I currently work at <a href="https://stripe.com">Stripe</a>. Previously,
-        I've also worked at Google and Amazon. If you want to say hello, my
-        email address is <a href="mailto:{{site.author.email }}">{{ site.author.email }}</a>.
+        I've also worked at Google and Amazon. If you'd like to get in touch,
+        my email address is <a href="mailto:{{site.author.email }}">{{ site.author.email }}</a>.
       </p>
     </div>
 
