--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -9,9 +9,9 @@
     <meta name="description" content="{{ metaDescription }}">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Fira+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
+    <link rel="dns-prefetch" href="https://use.typekit.net/">
+    <link rel="preconnect" href="https://use.typekit.net/" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/aao0hdd.css">
 
     <link rel="stylesheet" href="{{ '/assets/css/' ~ manifest['main.min.css'] }}">
 
@@ -73,7 +73,5 @@
     <main class="main">
       {% block main %}{% endblock %}
     </main>
-
-    {% block footer %}{% endblock %}
   </body>
 </html>
