--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -25,8 +25,10 @@ $page-width: 56rem; // 70-75 characters for 16px neue-haas-unica
 $page-gutter: 2rem;
 
 $font-stack-title: orpheuspro, serif;
-$font-stack-body: neue-haas-unica, sans-serif;
-$font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+$font-stack-body: neue-haas-unica, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  Roboto, Helvetica, Arial, sans-serif;
+$font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+  monospace;
 
 $base-font-sizes: (
   default: 1.6rem,
