--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
     <meta name="description" content="{{ metaDescription }}">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="preconnect" href="https://use.typekit.net/" crossorigin>
+    <link rel="preload" href="https://use.typekit.net/aao0hdd.css" as="style" crossorigin>
     <link rel="preconnect" href="https://p.typekit.net/" crossorigin>
     <link rel="stylesheet" href="https://use.typekit.net/aao0hdd.css">
 
