--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -9,8 +9,8 @@
     <meta name="description" content="{{ metaDescription }}">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="preload" href="https://use.typekit.net/aao0hdd.css" as="style" crossorigin="anonymous">
-    <link rel="preconnect" href="https://p.typekit.net/" crossorigin="anonymous">
+    <link rel="preload" href="https://use.typekit.net/aao0hdd.css" as="style">
+    <link rel="preconnect" href="https://p.typekit.net/">
     <link rel="stylesheet" href="https://use.typekit.net/aao0hdd.css">
 
     <link rel="stylesheet" href="{{ '/assets/css/' ~ manifest['main.min.css'] }}">
