Fallback to Georgia

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -24,7 +24,7 @@ $color-fg-light: $slate04;
 $page-width: 56rem; // 70-75 characters for 16px neue-haas-unica
 $page-gutter: 2rem;
 
-$font-stack-title: orpheuspro, serif;
+$font-stack-title: orpheuspro, Georgia, serif;
 $font-stack-body: neue-haas-unica, -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, Helvetica, Arial, sans-serif;
 $font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
