--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,6 +16,9 @@ $slate03: #99a0a6;
 $slate04: #5b6771;
 $slate05: #32414d;
 
+$background: #fffef2;
+$background-light: #fff;
+
 $page-width: 56rem; // 70-75 characters for 16px neue-haas-unica
 $page-gutter: 2rem;
 
