--- a/src/scss/prism.scss
+++ b/src/scss/prism.scss
@@ -4,7 +4,7 @@
 :not(pre) > code {
   @include font-size($small-font-sizes);
   font-family: $font-stack-mono;
-  background: $color-bg-light;
+  background: $background-light;
   border: 0.1rem solid $slate01;
   padding: 0.1em 0.05em;
   margin: 0 0.1em;
@@ -19,15 +19,15 @@
 pre {
   @include font-size($small-font-sizes);
   font-family: $font-stack-mono;
-  background: $color-bg-light;
+  background: $background-light;
   border: 0.1rem solid $slate01;
   padding: 1em;
   margin: 1em 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
 pre > code {
-  color: $color-fg;
+  color: $slate05;
   font-family: $font-stack-mono;
   text-align: left;
   white-space: pre;
@@ -35,10 +35,10 @@ pre > code {
   word-break: normal;
   word-wrap: normal;
   line-height: 1.5;
-  tab-size: 4;
-  hyphens: none;
+  tab-size: 2;
 }
 
+.token.important,
 .token.bold {
   font-weight: bold;
 }
@@ -47,85 +47,53 @@ pre > code {
   font-style: italic;
 }
 
+.token.comment,
+.token.prolog,
 .token.doctype,
-.token.macro.property,
-.token.punctuation,
-.token.variable {
-  color: $color-fg;
-}
-
-.token.blockquote,
 .token.cdata,
-.token.comment {
-  color: #6b6e70;
+.token.punctuation {
+  color: $slate03;
 }
 
-.token.builtin,
-.token.important,
-.token.interpolation-punctuation,
-.token.keyword,
-.token.operator,
-.token.rule {
-  color: #cf1736;
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905;
 }
 
-.token.attr-value,
-.token.regex,
+.token.selector,
+.token.attr-name,
 .token.string,
-.token.url {
-  color: #032f62;
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #5e8e01;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #a67f59;
 }
 
 .token.atrule,
-.token.boolean,
-.token.code,
-.token.command,
-.token.constant,
-.token.entity,
-.token.number,
-.token.property,
-.token.symbol {
-  color: #005cc5;
+.token.attr-value,
+.token.keyword {
+  color: #0070a3;
 }
 
-.token.prolog,
-.token.selector,
-.token.tag {
-  color: #1f7a26;
+.token.function {
+  color: #dd4a68;
 }
 
-.token.attr-name,
-.token.class,
-.token.class-name,
-.token.function,
-.token.id,
-.token.namespace,
-.token.pseudo-class,
-.token.pseudo-element,
-.token.url-reference .token.variable {
-  color: #6c37cd;
-}
-
-.token.entity {
-  cursor: help;
-}
-
-.token.title,
-.token.title .token.punctuation {
-  font-weight: bold;
-  color: #032f62;
-}
-
-.token.list {
-  color: #ed6a43;
-}
-
-.token.inserted {
-  background-color: #eaffea;
-  color: #1f7a26;
-}
-
-.token.deleted {
-  background-color: #ffecec;
-  color: #cf1736;
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90;
 }
