Use system font and reword homepage

--- a/sass/css/_variables.scss
+++ b/sass/css/_variables.scss
@@ -22,8 +22,8 @@ $background-light: #fff;
 $page-width: 56rem; // 70-75 characters for 16px neue-haas-unica
 $page-gutter: 2rem;
 
-$font-stack-title: orpheuspro, Georgia, serif;
-$font-stack-body: neue-haas-unica, Helvetica, Arial, Roboto, sans-serif;
+$font-stack-title: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+$font-stack-body: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 $font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, monospace;
 
 $base-font-sizes: (
