--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <p>
       I currently work at <a href="https://stripe.com">Stripe</a>. Previously,
       I've also worked at Google and Amazon. If you'd like to get in touch,
-      my email address is <a href="mailto:{{config.extra.email }}">{{ config.extra.email }}</a>.
+      my email is <a href="mailto:{{config.extra.email }}">{{ config.extra.email }}</a>.
     </p>
     <div class="hero__links">
       <a href="/blog">Blog</a>
