--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
     <meta name="description" content="{% block description %}{{ head::description() }}{% endblock %}">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/main.css">
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
