--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="title">David Chen</h1>
-  <div class="hero">
+  <div class="home">
+    <h1 class="home__title">David Chen</h1>
     <p>
       Hello! I'm a software engineer living in the San Francisco Bay Area.
       This site is dedicated to my creative interests and whims. I find programming
@@ -13,7 +13,7 @@
       I've also worked at Google and Amazon. If you'd like to get in touch,
       my email is <a href="mailto:{{config.extra.email }}">{{ config.extra.email }}</a>.
     </p>
-    <div class="hero__links">
+    <p class="home__links">
       <a href="/blog">Blog</a>
       <span class="hero__divider">/</span>
       <a href="/atom.xml">RSS</a>
@@ -23,6 +23,6 @@
       <a href="{{ config.extra.github_url | safe }}">GitHub</a>
       <span class="hero__divider">/</span>
       <a href="{{ config.extra.linkedin_url | safe }}">LinkedIn</a>
-    </div>
+    </p>
   </div>
 {% endblock content %}
