--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <article class="post">
-    <h1 class="title">{{ page.title }}</h1>
+    <h1 class="post__title">{{ page.title }}</h1>
     <time class="post__date" datetime="{{ page.date | date(format="%Y-%m-%d") }}">
       {{ page.date | date(format="%B %e, %Y") }}
     </time>
